--- a/airflow-webserver3.6/Dockerfile
+++ b/airflow-webserver3.6/Dockerfile
@@ -2,12 +2,12 @@
 # VERSION 0.1.0
 # AUTHOR: Ezhillarasan
 
-FROM tclezhil/centos-airflow
+FROM tclezhil/centos-python-3.6
 
 ## Core OS and dependencies install & configure
 
 ## Airflow install
-ENV AIRFLOW_VERSION 1.10.0.dev0+apache.incubating
+ENV AIRFLOW_VERSION 1.10.0
 ENV AIRFLOW_HOME /opt/airflow
 
 RUN useradd --shell /bin/bash --create-home --home $AIRFLOW_HOME airflow \
@@ -17,15 +17,16 @@ RUN useradd --shell /bin/bash --create-home --home $AIRFLOW_HOME airflow \
 
 RUN echo "export PATH=\$PATH:/usr/local/bin/" 
 
-RUN pip3 install  'pycrypto' 'mysqlclient'
+RUN pip3 install  'pycrypto' 'mysqlclient' 'flask_bcrypt'
 
-			
+RUN  python3.6 -m pip install apache-airflow==1.10.10 \
+ --constraint https://raw.githubusercontent.com/apache/airflow/1.10.10/requirements/requirements-python3.7.txt
+
+RUN pip3 install 'apache-airflow[celery]' 'apache-airflow[rabbitmq]' 'apache-airflow[mysql]' 'apache-airflow[async]' 'apache-airflow[password]' 'apache-airflow[crypto]' 'apache-airflow[kerberos]' 'apache-airflow[jdbc]' 'apache-airflow[docker]'
+
+
 # Entrypoint
-RUN mv /usr/bin/python /usr/bin/python_backup
-RUN cp  /usr/bin/python3.6 /usr/bin/python
 RUN cp /usr/local/bin/airflow /usr/bin/airflow
-RUN chown -R airflow:airflow /opt/airflow
-RUN chmod -R 777 /opt/airflow/logs
 
 RUN mkdir $AIRFLOW_HOME/entrypoint.d
 ADD entrypoint.d/* ${AIRFLOW_HOME}/entrypoint.d/
@@ -33,13 +34,15 @@ ADD entrypoint.sh ${AIRFLOW_HOME}/entrypoint.sh
 RUN chmod +x $AIRFLOW_HOME/entrypoint.sh \
     && chmod +x $AIRFLOW_HOME/entrypoint.d/*
 
+RUN yum install net-tools iputils  telnet -y
+
 # Configuration
 ADD airflow.cfg ${AIRFLOW_HOME}/airflow.cfg
 
 RUN sed -i "s:#AIRFLOW_HOME#:$AIRFLOW_HOME:" $AIRFLOW_HOME/airflow.cfg \
     && sed -i "s:#AIRFLOW_HOME#:$AIRFLOW_HOME:" $AIRFLOW_HOME/entrypoint.d/*
 
-RUN FERNET_KEY=$(python3 -c "from cryptography.fernet import Fernet; fernet_key= Fernet.generate_key(); print(fernet_key.decode()) ") \
+RUN FERNET_KEY=$(python3.6 -c "from cryptography.fernet import Fernet; fernet_key= Fernet.generate_key(); print(fernet_key.decode()) ") \
     && sed -i "s/#FERNET_KEY#/$FERNET_KEY/" $AIRFLOW_HOME/airflow.cfg \
     && sed -i "s/#FERNET_KEY#/$FERNET_KEY/" $AIRFLOW_HOME/entrypoint.d/*
 
