--- a/airflow-webserver3.6/airflow.cfg
+++ b/airflow-webserver3.6/airflow.cfg
@@ -19,7 +19,7 @@ executor = CeleryExecutor
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = mysql://airflow:airflow@172.17.0.3:3360/airflow
+sql_alchemy_conn = mysql://airflow:airflow@mysql:3306/airflow
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool.
