--- a/airflow-python3.6/airflow.cfg
+++ b/airflow-python3.6/airflow.cfg
@@ -122,7 +122,8 @@ celery_app_name = airflow.executors.celery_executor
 # "airflow worker" command. This defines the number of task instances that
 # a worker will take, so size up your workers based on the resources on
 # your worker box and the nature of your tasks
-celeryd_concurrency = 16
+#celeryd_concurrency = 16
+worker_concurrency = 16
 
 # When you start an airflow worker, airflow starts a tiny web server
 # subprocess to serve the workers local log files to the airflow main
@@ -137,7 +138,8 @@ worker_log_server_port = 8793
 broker_url = amqp://airflow:airflow@rabbitmq:5672/airflow
 
 # Another key Celery setting
-celery_result_backend = amqp://airflow:airflow@rabbitmq:5672/airflow
+result_backend = amqp://airflow:airflow@rabbitmq:5672/airflow
+#celery_result_backend = amqp://airflow:airflow@rabbitmq:5672/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it `airflow flower`. This defines the port that Celery Flower runs on
