--- a/airflow-python3.6/Dockerfile
+++ b/airflow-python3.6/Dockerfile
@@ -49,6 +49,9 @@ RUN FERNET_KEY=$(python3.6 -c "from cryptography.fernet import Fernet; fernet_ke
 
 RUN cp /usr/local/bin/flower /usr/bin/flower
 
+
+RUN pip3 install tqdm pandas==1.0.3
+
 EXPOSE 8080 5555 8793
 
 USER root
