--- a/airflow-python3.6/docker-compose.yml
+++ b/airflow-python3.6/docker-compose.yml
@@ -26,7 +26,7 @@ webserver:
     image: tclezhil/airflow-python3.6
     restart: always
     volumes:
-         - /docker-airflow_3.7/dags:/opt/airflow/dags
+         - /docker-airflow_3.7/audit_app/audit_tool_server_data/airflow_dags:/opt/airflow/dags
          - /docker-airflow_3.7/logs:/opt/airflow/logs
          - /docker-airflow_3.7/audit_app:/audit_app
     environment:
@@ -56,7 +56,7 @@ scheduler:
     image: tclezhil/airflow-python3.6
     restart: always
     volumes:
-        - /docker-airflow_3.7/dags:/opt/airflow/dags
+        - /docker-airflow_3.7/audit_app/audit_tool_server_data/airflow_dags:/opt/airflow/dags
         - /docker-airflow_3.7/logs:/opt/airflow/logs
         - /docker-airflow_3.7/audit_app:/audit_app
     environment:
@@ -70,7 +70,7 @@ worker:
     image: tclezhil/airflow-python3.6
     restart: always
     volumes:
-        - /docker-airflow_3.7/dags:/opt/airflow/dags
+        - /docker-airflow_3.7/audit_app/audit_tool_server_data/airflow_dags:/opt/airflow/dags
         - /docker-airflow_3.7/logs:/opt/airflow/logs
         - /docker-airflow_3.7/audit_app:/audit_app
     environment:
